# movies-organizer-cli

./: Cargo.toml
src/: main.rs
