[package]
name = "movie-organizer-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.129", features = ["derive"] }
serde_json = "1.0.59"
clap = { version = "3.0.5", features = ["derive"] }